--- a/public/style.css
+++ b/public/style.css
@@ -598,10 +598,6 @@ video {
   grid-column: span 6 / span 6;
 }
 
-.col-start-1 {
-  grid-column-start: 1;
-}
-
 .row-start-1 {
   grid-row-start: 1;
 }
@@ -698,10 +694,6 @@ video {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -855,15 +847,6 @@ video {
   border-top-width: 1px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-darkCustomGrey {
-  --tw-border-opacity: 1;
-  border-color: rgb(38 38 38 / var(--tw-border-opacity, 1));
-}
-
 .bg-CustomOrange {
   --tw-bg-opacity: 1;
   background-color: rgb(255 149 0 / var(--tw-bg-opacity, 1));
@@ -897,17 +880,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-lightCustomGrey {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(76 76 77 / var(--tw-bg-opacity, 1));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .p-2 {
@@ -1032,11 +1011,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -1050,6 +1024,10 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-custom-28 {
+  font-size: 28px;
 }
 
 .text-lg {
@@ -1072,10 +1050,6 @@ video {
   line-height: 1rem;
 }
 
-.text-custom-28 {
-  font-size: 28px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1086,14 +1060,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-3 {
-  line-height: .75rem;
 }
 
 .text-CustomOrange {
@@ -1111,29 +1077,17 @@ video {
   color: rgb(76 76 77 / var(--tw-text-opacity, 1));
 }
 
+.text-lightCustomGrey\/50 {
+  color: rgb(76 76 77 / 0.5);
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-lightCustomGrey\/50 {
-  color: rgb(76 76 77 / 0.5);
-}
-
 .underline {
   text-decoration-line: underline;
-}
-
-.underline-offset-1 {
-  text-underline-offset: 1px;
-}
-
-.underline-offset-8 {
-  text-underline-offset: 8px;
-}
-
-.underline-offset-2 {
-  text-underline-offset: 2px;
 }
 
 .underline-offset-4 {
@@ -1197,6 +1151,11 @@ video {
   background-color: rgb(255 149 0 / 0.3);
 }
 
+.hover\:bg-CustomOrangesecondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 146 51 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-customWhite:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 241 243 / var(--tw-bg-opacity, 1));
@@ -1213,15 +1172,6 @@ video {
 
 .hover\:bg-lightCustomGrey\/25:hover {
   background-color: rgb(76 76 77 / 0.25);
-}
-
-.hover\:bg-CustomOrangesecondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 146 51 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-lightCustomGrey\/50:hover {
-  background-color: rgb(76 76 77 / 0.5);
 }
 
 .hover\:text-black:hover {
@@ -1373,12 +1323,12 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-7 {
-    grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1437,6 +1387,11 @@ video {
     line-height: 2rem;
   }
 
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1461,18 +1416,9 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:row-start-2 {
-    grid-row-start: 2;
-  }
-
   .lg\:flex {
     display: flex;
   }
@@ -1516,24 +1462,12 @@ video {
     grid-column: span 4 / span 4;
   }
 
-  .xl\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .xl\:col-start-4 {
-    grid-column-start: 4;
-  }
-
   .xl\:col-start-5 {
     grid-column-start: 5;
   }
 
   .xl\:flex {
     display: flex;
-  }
-
-  .xl\:grid {
-    display: grid;
   }
 
   .xl\:grid-cols-7 {
@@ -1596,24 +1530,12 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
-  .\32xl\:col-span-4 {
-    grid-column: span 4 / span 4;
-  }
-
   .\32xl\:h-7 {
     height: 1.75rem;
   }
 
   .\32xl\:w-7 {
     width: 1.75rem;
-  }
-
-  .\32xl\:grid-cols-7 {
-    grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
   .\32xl\:gap-6 {
@@ -1629,6 +1551,11 @@ video {
     padding-bottom: 1rem;
   }
 
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .\32xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1638,14 +1565,13 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .\32xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 
 @media (min-width: 1920px) {
+  .\33xl\:max-w-full {
+    max-width: 100%;
+  }
+
   .\33xl\:max-w-screen-3xl {
     max-width: 1920px;
   }
